# portfoilio_1_farmingSim_ver1

./: CMakeLists.txt  README.md  main.cpp
farm_stuff/: farm.cpp  farm.hpp  farm_printer.cpp  farm_printer.hpp  game_printer.cpp  game_printer.hpp  player.cpp  player.hpp
interactions/: inventory.cpp  inventory.hpp  item.hpp  shop.cpp  shop.hpp
interactions/items/: produce.cpp  produce.hpp  seeds.cpp  seeds.hpp
logic/: ansi_clear.hpp  cupid.cpp  cupid.hpp
plots/: plant.cpp  plant.hpp  plot.hpp  soil.cpp  soil.hpp
plots/plants/: beet.hpp  brussel_sprouts.hpp  carrot.hpp  lettuce.hpp  melon.hpp  onion.hpp  spinach.hpp  zucchini.hpp
plots/weeds/: weed_classic.cpp  weed_classic.hpp
src/: ansi_clear.hpp  carrot.cpp  carrot.hpp  cupid.cpp  cupid.hpp  farm.cpp  farm.hpp  farm_brain.cpp  farm_brain.hpp  farm_printer.cpp  farm_printer.hpp  game_printer.cpp  game_printer.hpp  inventory.cpp  inventory.hpp  item.hpp  items.cpp  items.hpp  lootTable.cpp  lootTable.hpp  plant.cpp  plant.hpp  plantData.cpp  plantData.hpp  plants.cpp  plants.hpp  player.cpp  player.hpp  plot.hpp  produce.cpp  produce.hpp  seeds.cpp  seeds.hpp  shop.cpp  shop.hpp  soil.cpp  soil.hpp  weed.hpp
src/farm_and_friends/: farm.cpp  farm.hpp  farm_printer.cpp  farm_printer.hpp  plant.cpp  plant.hpp  plot.hpp  soil.cpp  soil.hpp  weed.hpp
src/farm_and_friends/weeds/: weed_classic.cpp  weed_classic.hpp
src/items/: produce.cpp  produce.hpp  seeds.cpp  seeds.hpp
src/plants/: beet.hpp  brussels_sprouts.hpp  carrot.hpp  lettuce.hpp  melon.hpp  onion.hpp  spinach.hpp  zucchini.hpp
src/weeds/: weed_classic.cpp  weed_classic.hpp
tests/: carrot_test.cpp  cupid_test.cpp  farm_brain_test.cpp  farm_printer_test.cpp  farm_test.cpp  game_printer_test.cpp  inventory_test.cpp  items_test.cpp  melon_test.cpp  onion_test.cpp  plants_test.cpp  player_test.cpp  produce_test.cpp  seeds_test.cpp  shop_test.cpp  soil_test.cpp  zucchini_test.cpp
tests/farms_test/: cupid_test.cpp  farm_test.cpp  inventory_test.cpp  item_test.cpp  player_test.cpp  printer_test.cpp  shop_test.cpp
tests/plant_tests/: beet_test.cpp  brussels_sprouts_test.cpp  carrot_test.cpp  lettuce_test.cpp  melon_test.cpp  onion_test.cpp  spinach_test.cpp  zucchini_test.cpp
tests/plot_tests/: plants_tests.cpp  soil_test.cpp  weeds_test.cpp
